# claude-usage-tray

./: .gitignore  Cargo.toml  README.md  api_client.py  constants.py  formatting.py  icon_render.py  main.py  requirements.txt  start.sh  tray_app.py
src/: api_client.rs  constants.rs  icon_renderer.rs  main.rs  poll.rs  usage.rs
src/tray/: desktop.rs  linux.rs  mod.rs
