[package]
name = "claude-usage-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
ab_glyph = "0.2"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.24"
muda = "0.19"
tao = "0.35"

[profile.release]
opt-level = "s"
lto = true
strip = true
